# stikkit

./: README.md
stikkit/: CMakeLists.txt  License.txt  Makefile  Makefile.am  Makefile.in  configuration.cpp  configuration.hpp  configure  configure.ac  main.cpp  stikkit.pro  syslog.cpp  syslog.hpp  terminalparser.cpp  terminalparser.hpp  webquery.cpp  webquery.hpp
stikkit/debian/: changelog  control
stikkit/man/: stikkit.1
